fixed card spacing on index page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -146,8 +146,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .card-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 10px;
+  grid-template-columns: 33% 33% 33%;
+  grid-gap: 15px;
   padding: 20px; }
 
 .card {
@@ -155,6 +155,7 @@ h1, h2, h3, h4, h5, h6 {
   grid-column: 1fr;
   grid-row: 1fr;
   padding: 10px;
+  width: 95%;
   border-radius: 5px;
   background-color: #aecc76;
   border: 2px solid #825d34;
@@ -176,3 +177,15 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 20px; }
   .card a:hover {
     background-color: #825d34; }
+
+.grid-col-1 {
+  grid-column: 1/2;
+  width: 100%; }
+
+.grid-col-2 {
+  grid-column: 2/3;
+  width: 100%; }
+
+.grid-col-3 {
+  grid-column: 3/4;
+  width: 100%; }
